<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="@color/common_google_signin_btn_text_dark_default"
    tools:context="com.healthheart.jessica.hh.Activity.LoginActivity">



    <Button
        android:id="@+id/btnVoltarLog"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="149dp"
        android:layout_height="30dp"
        android:text="Voltar"
        android:textSize="8sp" />



    <ImageView
        android:layout_width="100dp"
        android:layout_height="83dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/ic_logo_menor" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.09"
        android:gravity="center"
        android:text="@string/txt_BemVindos"
        android:textColor="#97496d"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.10"/>

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHighlight="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textColorLink="@color/colorPrimaryDark"
        android:textCursorDrawable="@color/colorPrimaryDark"
        android:ems="10"
        android:gravity="center"
        android:hint="Email"
        android:inputType="textEmailAddress" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.10"/>


    <EditText
        android:id="@+id/edtSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:hint="Senha"
        android:inputType="textPassword"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHighlight="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textColorLink="@color/colorPrimaryDark"
        android:textCursorDrawable="@color/colorPrimaryDark"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.10"/>

    <Button
        android:id="@+id/bnt_Logar"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:textColor="#EEB4B4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.05"
        android:text="@string/txt_Logar" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.10" />

    <Button
        android:id="@+id/btnNaotemLogin"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_NaoTemLogin"
        android:textColor="#97496d"
        android:textStyle="bold" />


    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.10" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.05"
        android:gravity="center"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/txt_Direitos" />


</LinearLayout>
