<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="@color/common_google_signin_btn_text_dark_default"
    tools:context="com.healthheart.jessica.hh.Activity.AguaActivity">

    <Button
        android:id="@+id/btnVoltarPrinpalBb"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="149dp"
        android:layout_height="30dp"
        android:text="@string/txt_VoltaPrinc"
        android:textSize="8sp" />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="42dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/ic_logo_menor" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#00BFFF"
        android:text="@string/txt_agua"
        android:textSize="20dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.10"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAddAgua"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#00BFFF"
            android:text="Add Água"
            android:textColorLink="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/btnHisAgua"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#00BFFF"
            android:text="Histórico Água" />


    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

        <EditText
            android:id="@+id/edttxtDataAgua"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="Data"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHighlight="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark"
            android:textColorLink="@color/colorPrimaryDark"
            android:textCursorDrawable="@color/colorPrimaryDark"
            tools:textColor="@color/colorPrimaryDark" />

        <EditText
            android:id="@+id/edttxtQntAgua"
            style="@android:style/Widget.DeviceDefault.AutoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:ems="10"
            android:hint="Quantidade de Copos"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHighlight="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark"
            android:textColorLink="@color/colorPrimaryDark"
            android:textCursorDrawable="@color/colorPrimaryDark"
            android:inputType="numberDecimal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSalvarAgua"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#00BFFF"
            android:text="Salvar"
            android:textColorLink="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/btnCancAgua"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#00BFFF"
            android:text="Cancelar" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.05"
        android:gravity="center"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/txt_Direitos" />


</LinearLayout>
